--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&family=Oxanium:wght@700&display=swap" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="QQUIMERA.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -263,3 +263,4 @@
   <script src="QQUIMERA.js" defer></script>
 </body>
 </html>
+
